
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int overprint; } ;
typedef TYPE_1__ pdf_page ;
typedef int fz_context ;



int
pdf_page_uses_overprint(fz_context *ctx, pdf_page *page)
{
 return page ? page->overprint : 0;
}
